--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,6 +2,10 @@
   box-sizing: border-box;
 }
 
+img {
+  width: 100%;
+}
+
 html, body {
   height: 100%
 }
@@ -13,6 +17,7 @@ body {
 }
 
 ul {
+  padding: 0;
   list-style-type: none;
 }
 
@@ -28,6 +33,10 @@ header {
   padding: 5px;
 }
 
+.timeline {
+  position: relative;
+}
+
 .timeline-events {
   position: relative;
   display: block;
@@ -40,11 +49,12 @@ header {
 .timeline-events::after {
   content: '';
   width: 0;
-  height: 92%;
+  height: 95%;
   position: absolute;
   border: 2px solid #266188;
   top: 30px;
   left: 50%;
+  transform: translateX(50%);
 }
 
 .timeline-event {
@@ -54,12 +64,12 @@ header {
   width: 300px;
   background: #F5F5F5;
   border-radius: 3px;
-  padding: 10px;
+  padding: 0 0 0 5px;
   margin: 50px 20px;
   box-shadow: 0 10px 10px 0 #898989;
 }
 
-.timeline-event::after{
+.timeline-event:nth-child(odd)::after{
     content: '';
     position: absolute;
     left: 100%;
@@ -72,10 +82,25 @@ header {
     clear: both;
 }
 
-#second-event {
-  position: relative;
-  bottom: 30px;
+.timeline-event:nth-child(even) {
   float: right;
+}
+
+.timeline-event:nth-child(odd) {
+  clear: both;
+}
+
+.timeline-event:nth-child(even)::before{
+    content: '';
+    position: absolute;
+    right: 100%;
+    top: 20%;
+    width: 0;
+    height: 0;
+    border-right: 10px solid #F5F5F5;
+    border-bottom: 8px solid transparent;
+    border-top: 8px solid transparent;
+    clear: both;
 }
 
 #second-event img {
@@ -103,13 +128,86 @@ header {
   top: 30px;
 }
 
-#third-event {
-  clear: both;
-}
-
 aside {
   padding-left:5px;
   margin-left: 5px;
   float: right;
   box-shadow: inset 5px 0 5px -5px #29627E;
 }
+
+.timeline-icon {
+  position: relative;
+  border: 1px solid #266188;
+  background: #266188;
+  border-radius: 50%;
+  left: 135%;
+  height: 15px;
+  width: 15px;
+  z-index: 1;
+}
+
+#second-event .timeline-icon {
+  position: relative;
+  border: 1px solid #266188;
+  background: #266188;
+  border-radius: 50%;
+  left: -39%;
+  height: 15px;
+  width: 15px;
+  z-index: 2;
+}
+
+.more-button {
+  background-color: #266188;
+  color: #FFF;
+  width: 43px;
+  height: 22px;
+  padding: 0;
+  font-size: 10px
+
+}
+
+/*////////////////////////////////////////////////*/
+
+/* * {
+  box-sizing: border-box;
+}
+
+img {
+  width: 100%;
+}
+
+ul {
+  padding: 0;
+  list-style-type: none;
+}
+
+.timeline {
+  position: relative;
+}
+
+.timeline::before {
+  content: '';
+  background-color: #266188;
+  width: 3px;
+  height: 95%;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.timeline-content {
+  background-color: red;
+  height: 250px;
+  margin-top: 25px;
+  width: 600px;
+}
+
+.timeline-event:nth-child(even) .timeline-content {
+  float: right;
+  background-color: blue;
+}
+
+.timeline-event:nth-child(odd) {
+  clear: both;
+} */
