--- a/styles/styles.css
+++ b/styles/styles.css
@@ -163,51 +163,13 @@ aside {
   width: 43px;
   height: 22px;
   padding: 0;
-  font-size: 10px
+  font-size: 10px;
+  transition: background-color 1s ease-out;
+
 
 }
 
-/*////////////////////////////////////////////////*/
-
-/* * {
-  box-sizing: border-box;
+.more-button:hover {
+  background-color: #FFF;
+  color: #266188;
 }
-
-img {
-  width: 100%;
-}
-
-ul {
-  padding: 0;
-  list-style-type: none;
-}
-
-.timeline {
-  position: relative;
-}
-
-.timeline::before {
-  content: '';
-  background-color: #266188;
-  width: 3px;
-  height: 95%;
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-}
-
-.timeline-content {
-  background-color: red;
-  height: 250px;
-  margin-top: 25px;
-  width: 600px;
-}
-
-.timeline-event:nth-child(even) .timeline-content {
-  float: right;
-  background-color: blue;
-}
-
-.timeline-event:nth-child(odd) {
-  clear: both;
-} */
